--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.43.3",
     "react-native-communications": "^2.2.1",
     "react-native-interactable": "0.0.8",
+    "react-native-vector-icons": "^4.0.1",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
