--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@shoutem/animation": "^0.10.2",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
+    "react-native-collapsible": "^0.8.0",
     "react-native-communications": "^2.2.1",
     "react-native-interactable": "0.0.8",
     "react-native-vector-icons": "^4.0.1",
