implement rn-clean-form

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.18.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
+    "react-native-clean-form": "^0.4.1",
     "react-native-collapsible": "^0.8.0",
     "react-native-communications": "^2.2.1",
     "react-native-interactable": "0.0.8",
