--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-native-collapsible": "^0.8.0",
     "react-native-communications": "^2.2.1",
     "react-native-interactable": "0.0.8",
+    "react-native-masked-text": "^1.5.1",
+    "react-native-telephone-input": "^1.0.0",
     "react-native-vector-icons": "^4.0.1",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7",
     "react-redux": "^5.0.4",
