--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-communications": "^2.2.1",
     "react-native-interactable": "0.0.8",
     "react-native-masked-text": "^1.5.1",
+    "react-native-search-bar": "^3.0.0",
     "react-native-vector-icons": "^4.0.1",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7",
     "react-redux": "^5.0.4",
