set up framework for delivering app feedback to remote google sheets

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "moment": "^2.18.1",
+    "querystring": "^0.2.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-native-collapsible": "^0.8.0",
@@ -15,6 +17,7 @@
     "react-native-interactable": "0.0.8",
     "react-native-masked-text": "^1.5.1",
     "react-native-push-notification": "^3.0.0",
+    "react-native-root-toast": "^1.1.2",
     "react-native-search-bar": "^3.0.0",
     "react-native-vector-icons": "^4.0.1",
     "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7",
