--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "querystring": "^0.2.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
+    "react-native-app-intro": "^1.1.5",
     "react-native-collapsible": "^0.8.0",
     "react-native-communications": "^2.2.1",
     "react-native-interactable": "0.0.8",
