set up OneSignal

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-interactable": "0.0.8",
     "react-native-iphone-x-helper": "^1.0.1",
     "react-native-masked-text": "^1.5.1",
+    "react-native-onesignal": "^3.0.7",
     "react-native-push-notification": "^3.0.0",
     "react-native-root-toast": "^1.4.0",
     "react-native-search-bar": "^3.0.0",
