--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-toast-native')
     compile project(':react-native-onesignal')
     compile project(':react-native-vector-icons')
     compile project(':realm')
