update mixpanel actions

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-app-intro": "^1.1.5",
     "react-native-collapsible": "^0.8.0",
     "react-native-communications": "^2.2.1",
+    "react-native-contacts": "^2.0.0",
     "react-native-device-info": "^0.13.0",
     "react-native-interactable": "0.0.8",
     "react-native-iphone-x-helper": "^1.0.1",
