--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react-native-collapsible": "^0.8.0",
     "react-native-communications": "^2.2.1",
     "react-native-contacts": "^2.0.0",
+    "react-native-datepicker": "^1.6.0",
     "react-native-device-info": "^0.13.0",
     "react-native-interactable": "0.0.8",
     "react-native-iphone-x-helper": "^1.0.1",
     "react-native-masked-text": "^1.5.1",
     "react-native-mixpanel": "0.0.16",
+    "react-native-modal-dropdown": "^0.5.0",
     "react-native-onesignal": "^3.0.7",
     "react-native-push-notification": "^3.0.2",
     "react-native-search-bar": "^3.0.0",
